beezuscomplex.com/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website-beezuscomplex
  namespace: ingress-nginx
  labels:
    version: beezuscomplex-1
spec:
  selector:
    matchLabels:
      app: website-beezuscomplex
  replicas : 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: website-beezuscomplex
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: arm64
      containers:
      - image: arm64v8/ghost:1.24.2
        name: ghost-beezuscomplex
        ports:
        - containerPort: 2368
        volumeMounts:
        - name: beezuscomplex-data
          mountPath: /var/lib/ghost/content
        - name: beezuscomplex-config
          mountPath: /var/lib/ghost/config.production.json
          subPath: config.production.json
      volumes:
      - name: beezuscomplex-data
        persistentVolumeClaim:
          claimName: beezuscomplex-data
      # kubectl create configmap beezuscomplex-config -n ingress-nginx --from-file=config.json
      - name: beezuscomplex-config
        configMap:
          name: beezuscomplex-config
          items:
          - key: config.json
            path: config.production.json
      imagePullSecrets:
        - name: docker-reg-secret
