beezuscomplex.com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-beezuscomplex
  namespace: ingress-nginx
  labels:
    app: website-beezuscomplex
spec:
  ports:
  - name: server
    port: 80
    targetPort: 2368
  selector:
    app: website-beezuscomplex
