beezuscomplex.com/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-beezuscomplex
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
    - host: "beezuscomplex.com"
      http:
        paths:
          - backend:
              serviceName: website-beezuscomplex
              servicePort: 80
            path: /
          - backend:
              serviceName: static-web
              servicePort: 80
            path: /static
